working on getting open jfx to work